initial page layout

--- a/index.html
+++ b/index.html
@@ -2,12 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Risk</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-
+    <div class="container">
+      <h1>Risk</h1>
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>Player 1</h4>
+        </div>
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+          <h4>Player 2</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>Player 3</h4>
+        </div>
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+          <h4>Player 4</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>Player 5</h4>
+        </div>
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+          <h4>Player 6</h4>
+        </div>
+      </div>
+    </div>
   <script src="js/bootstrap-3.1.0.js"></script>
   <script src="js/scripts.js"></script>
   </body>
