add adjacent territory data for North America and some styling

--- a/index.html
+++ b/index.html
@@ -10,37 +10,23 @@
     <div class="container">
       <h1>Risk</h1>
       <div class="row">
-        <div class="col-sm-4">
-          <h4>Player 1</h4>
+        <div class="col-sm-2">
+          <h4 id="p1">Player 1</h4>
+          <h4 id="p2">Player 2</h4>
+          <h4 id="p3">Player 3</h4>
+          <h4 id="p4">Player 4</h4>
+          <h4 id="p5">Player 5</h4>
+          <h4 id="p6">Player 6</h4>
+        </div>
+        <div class="col-sm-6">
         </div>
         <div class="col-sm-4">
-        </div>
-        <div class="col-sm-4">
-          <h4>Player 2</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <h4>Player 3</h4>
-        </div>
-        <div class="col-sm-4">
-        </div>
-        <div class="col-sm-4">
-          <h4>Player 4</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <h4>Player 5</h4>
-        </div>
-        <div class="col-sm-4">
-        </div>
-        <div class="col-sm-4">
-          <h4>Player 6</h4>
+          <div id="activePlayer">
+          </div>
         </div>
       </div>
     </div>
-  <script src="js/bootstrap-3.1.0.js"></script>
+  <script src="js/jquery-3.1.0.js"></script>
   <script src="js/scripts.js"></script>
   </body>
 </html>
