--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       </div>
     </div>
   <script src="js/jquery-3.1.0.js"></script>
+  <script src="js/player.js"></script>
+  <script src="js/territory.js"></script>
+  <script src="js/continent.js"></script>
+  <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
   </body>
 </html>
