connect player cards to backend

--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
       <div class="container">
         <h1>Risk</h1>
         <div class="row">
-          <div class="col-sm-5">
+          <div class="col-sm-4">
             <div id="activePlayer">
             </div>
           </div>
-          <div class="col-sm-2" id="teams">
-            <h4 id="p1">Team Yellow</h4>
-            <h4 id="p2">Team Green</h4>
-            <h4 id="p3">Team Blue</h4>
-            <h4 id="p4">Team Red</h4>
-            <h4 id="p5">Team Black</h4>
+          <div class="col-sm-4" id="teams">
+            <h4 class="p1">Team Yellow</h4>
+            <h4 class="p2">Team Green</h4>
+            <h4 class="p3">Team Blue</h4>
+            <h4 class="p4">Team Red</h4>
+            <h4 class="p5">Team Black</h4>
           </div>
-          <div class="otherPlayer"></div>
+          <div class="col-sm-4">
+            <div id="otherPlayer">
+            </div>
+          </div>
         </div>
         <!-- dice divs start -->
         <div id="dice" class="col-sm-4">
