allow program to allow players to roll dice depending on how many troops they have, then sorting the results of the dice in acending order

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <button type="button" class="btn btn-lg btn-danger" id="battle">BATTLE!</button>
           </div>
           <div class="row defenseDice">
-            <div class="red" id="defenseOne"></div>
-            <div class="red" id="defenseTwo"></div>
+            <div class="red" id="defendOne"></div>
+            <div class="red" id="defendTwo"></div>
           </div>
           <div class="row attackDice">
             <div class="black" id="attackOne"></div>
