--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
   </head>
   <body>
     <div class="intro">
+      <h1>Risk</h1>
       <div class="col-sm-4" id="teams">
         <h3>Select Your Teams:</h3>
         <form>
           <label class="form-check-label p1">
-              <input class="form-check-input" type="checkbox" value="yellow">
+              <input class="form-check-input" type="checkbox" value="Yellow">
               Team Yellow
           </label></br>
           <label class="form-check-label p2">
-              <input class="form-check-input" type="checkbox" value="yellow">
+              <input class="form-check-input" type="checkbox" value="Green">
               Team Green
           </label></br>
           <label class="form-check-label p3">
-              <input class="form-check-input" type="checkbox" value="yellow">
+              <input class="form-check-input" type="checkbox" value="Blue">
               Team Blue
           </label></br>
           <label class="form-check-label p4">
-              <input class="form-check-input" type="checkbox" value="yellow">
+              <input class="form-check-input" type="checkbox" value="Red">
               Team Red
           </label></br>
           <label class="form-check-label p5">
-              <input class="form-check-input" type="checkbox" value="yellow">
+              <input class="form-check-input" type="checkbox" value="Black">
               Team Black
           </label>
           <button id="letsPlay" type="submit" class="btn btn-classic">Let's Play!</button>
