--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
+    <h1>Risk</h1>
     <div class="intro">
-      <h1>Risk</h1>
+      <!-- <h1>Risk</h1> -->
       <div class="col-sm-4" id="teams">
         <h3>Select Your Teams:</h3>
         <form>
@@ -39,7 +40,7 @@
       </div>
     </div>
     <div class="container">
-      <h1>Risk</h1>
+      <!-- <h1>Risk</h1> -->
       <div class="row">
         <div class="col-sm-4">
           <div id="activePlayer">
