show/hide teams playing on start

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Risk</h1>
     <div class="intro">
       <!-- <h1>Risk</h1> -->
-      <div class="col-sm-4" id="teams">
+      <div class="col-sm-4" id="teams-intro">
         <h3>Select Your Teams:</h3>
         <form>
           <label class="form-check-label p1">
