--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <!-- dice divs start -->
-      <div class="col-sm-4">Attacking from: <span id="attackingTerritory"></span></div>
+      <div class="col-sm-4 box">Attacking from:
+        <h3 id="attackingTerritory"></h3>
+        <ul id="adjacent"></ul>
+      </div>
       <div id="dice" class="col-sm-4">
         <div class="row">
           <button type="button" class="btn btn-lg btn-danger" id="battle">BATTLE!</button>
@@ -94,7 +97,7 @@
         </div>
         <h2 id="winner"></h2>
       </div>
-      <div class="col-sm-4">Defending from: <span id="defendingTerritory"></span></div>
+      <div class="col-sm-4 box">Defending from: <h3 id="defendingTerritory"></h3></div>
       <!-- dice divs end -->
     </div>
     <script src="js/jquery-3.1.0.js"></script>
