assign attack and defend territories to game object

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <p>
                 Place Troops in<br>
                 <span id="placeTroopsTerritory"></span>
-                <select id="numberofTroopsPlaced"></select>
+                <select id="numberOfTroopsPlaced"></select>
               </p>
             </div>
 
