add fireworks images and fix winner finale, fix hovers

--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
     </div>
     <div id="finale">
       <div class="jumbotron">
+        <img src="img/fireworks2.gif"><img src="img/fireworks6.gif"><img class="break" src="img/fireworks12.gif">
+        <img src="img/fireworks4.gif"><img src="img/fireworks3.gif">
         <h1><span id="theWinner"></span></h1>
-        <br>
-        <img src="img/fireworks2.gif"><img src="img/fireworks4.gif"><img src="img/fireworks3.gif"><img src="img/fireworks6.gif">
-        <img src="img/fireworks1.gif"><img src="img/fireworks9.gif"><img src="img/fireworks8.gif"><img src="img/fireworks7.gif"><img src="img/fireworks6.gif">
-        <img src="img/fireworks5.gif"><img src="img/fireworks1.gif">
+        <img src="img/fireworks4.gif"><img src="img/fireworks6.gif">
+        <img src="img/fireworks8.gif"><img src="img/fireworks6.gif">
+        <img class="break" src="img/fireworks5.gif">
       </div>
     </div>
     <script src="js/jquery-3.1.0.js"></script>
