--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
                   <select id="numberOfTroopsPlaced"></select>
                 </p>
               </div>
-
-
             </div>
           </div>
           <div class="col-sm-4" id="teams">
@@ -80,7 +78,10 @@
         </div>
         <!-- dice divs start -->
         <div class="col-sm-4 box">Attacking from:
-          <h3 id="attackingTerritory"></h3>
+          <h3 id="attackingTerritory">
+            <span class="territoryName"></span>
+            <span class="toops"></span>
+          </h3>
           <ul id="adjacent"></ul>
         </div>
         <div id="dice" class="col-sm-4">
@@ -98,7 +99,12 @@
           </div>
           <h2 id="winner"></h2>
         </div>
-        <div class="col-sm-4 box">Defending from: <h3 id="defendingTerritory"></h3></div>
+        <div class="col-sm-4 box">Defending from:
+          <h3 id="defendingTerritory">
+            <span class="territoryName"></span>
+            <span class="toops"></span>
+          </h3>
+        </div>
         <!-- dice divs end -->
       </div>
     </div>
