Add media queries to intro div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="game-body">
       <h1>Risk</h1>
       <div class="intro">
-        <!-- <h1>Risk</h1> -->
+        <div class="col-sm-4"></div> <!-- Empty container to center intro -->
         <div class="col-sm-4" id="teams-intro">
           <h3>Select Your Teams:</h3>
           <form>
@@ -39,9 +39,9 @@
             <button id="letsPlay" type="submit" class="btn btn-classic">Let's Play!</button>
           </form>
         </div>
+        <div class="col-sm-4"></div> <!-- Empty container to center intro -->
       </div>
       <div class="container">
-        <!-- <h1>Risk</h1> -->
         <div class="row">
           <div class="col-sm-4">
             <div id="activePlayer">
